--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC6"
+}
+
 allprojects {
     repositories {
         google()
@@ -26,4 +30,13 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+detekt {
+    version = "1.0.0.RC6"
+    profile("main") {
+        input = "$projectDir/app"
+        config = "$projectDir/detekt.yml"
+        filters = ".*test.*,.*/resources/.*,.*/tmp/.*"
+    }
 }
